@@ -12,7 +12,7 @@
 	{assign value=$schema.periods|@count var=periodcnt}
 	<TR id="promotionschemadata" style="display: none;">
 		<TD style="width: 100%;">
-			<FORM method="post" name="tariffs" action="?m=promotionschemaedit&amp;id={$schema.id}&amp;action=tariff">
+			<FORM method="post" name="tariffs" action="?m=promotionschemaedit&id={$schema.id}&action=tariff">
 			<TABLE class="lmsbox-inner">
 				<THEAD>
 				<TR>
@@ -40,7 +40,7 @@
 						{$tariff.value|string_format:"%.2f"}
 					</TD>
 					<TD class="text-right valign-top nobr">
-						<SPAN id="tariffopt{$tariff.id}"{if $error && $formdata.aid == $tariff.id} style="display:none"{/if}>
+						<SPAN id="tariffopt{$tariff.id}" class="tariffopt" {if $error && $formdata.aid == $tariff.id} style="display:none"{/if}>
 						{if $tariff.optional}{trans("yes")}{else}{trans("no")}{/if}
 						</SPAN>
 						{if $error && $formdata.aid == $tariff.id}
@@ -48,22 +48,27 @@
 						{/if}
 					</TD>
 					<TD class="text-right valign-top nobr">
-						<SPAN id="tariffsel{$tariff.id}"{if $error && $formdata.aid == $tariff.id} style="display:none"{/if}>
+						<SPAN id="tariffsel{$tariff.id}" class="tariffsel" {if $error && $formdata.aid == $tariff.id} style="display:none"{/if}>
 						{if $tariff.selectionid}{$tariff.selectionid}{/if}
 						</SPAN>
 						{if $error && $formdata.aid == $tariff.id}
+						<span id="tariffselection">
 						<SELECT name="form[tariffsel]" id="tariffsel" {tip text="Choose selection list" trigger="tariffsel"}>
-							<OPTION value="0" {if !$formdata.tariffsel}selected{/if}>{trans("- none -")}</OPTION>
-							{foreach array(1,2,3,4,5,6,7,8,9) as $selid}
+							<OPTION value="0" {if !$formdata.tariffsel}selected{/if}>{trans("<!promotionassignmentselectionid>- none -")}</OPTION>
+							<OPTION value="-1" {if $formdata.tariffsel == -1}selected{/if}>{trans("<!promotionassignmentselectionid>- new -")}</OPTION>
+							{foreach $schema.selections as $selid}
 							<OPTION value="{$selid}"{if $selid == $formdata.tariffsel} selected{/if}>{$selid}</OPTION>
 							{/foreach}
 						</SELECT>
+						<br>
+						<input type="text" size="15" name="form[tariffnewsel]" id="tariffnewsel"{if $formdata.tariffsel != -1} style="display: none;"{/if} {tip text="Enter new selection list name" trigger="tariffnewsel"}
+						</span>
 						{/if}
 					</TD>
 					{foreach from=$schema.periods item=period key=key}
 					<TD class="text-right valign-top nobr">
-						<SPAN id="tariffval{$tariff.id}_{$key}"{if $error && $formdata.aid == $tariff.id} style="display:none"{/if}>
-						{if $tariff.data.value.$key != 'NULL'}{$tariff.data.value.$key|string_format:"%.2f"}{/if}						
+						<SPAN id="tariffval{$tariff.id}_{$key}" class="tariffval" {if $error && $formdata.aid == $tariff.id} style="display:none"{/if}>
+						{if $tariff.data.value.$key != 'NULL'}{$tariff.data.value.$key|string_format:"%.2f"}{/if}
 						{if $tariff.data.period.$key}{assign var=pkey value=$tariff.data.period.$key}({$_PERIODS.$pkey}){/if}
 						</SPAN>
 						{if $error && $formdata.aid == $tariff.id}
@@ -113,11 +118,14 @@
 					</TD>
 					<TD class="ftop text-right valign-top nobr">
 						<SELECT name="form[sel]" {tip text="Choose selection list" trigger="sel"}>
-							<OPTION value="0" {if !$formdata.sel}selected{/if}>{trans("- none -")}</OPTION>
-							{foreach array(1,2,3,4,5,6,7,8,9) as $selid}
+							<OPTION value="0" {if !$formdata.sel}selected{/if}>{trans("<!promotionassignmentselectionid>- none -")}</OPTION>
+							<OPTION value="-1" {if $formdata.sel == -1}selected{/if}>{trans("<!promotionassignmentselectionid>- new -")}</OPTION>
+							{foreach $schema.selections as $selid}
 							<OPTION value="{$selid}"{if $selid == $formdata.sel} selected{/if}>{$selid}</OPTION>
 							{/foreach}
 						</SELECT>
+						<br>
+						<input type="text" size="15" name="form[newsel]" id="newsel" style="display: none;" {tip text="Enter new selection list name" trigger="newsel"}
 					</TD>
 					{foreach from=$schema.periods item=period key=key}
 					<TD class="ftop text-right valign-top nobr">
@@ -161,7 +169,7 @@ function edit_tariff(id) {
 	}
 
 	var tr = document.getElementById('row'+id),
-		tds = tr.getElementsByTagName('SPAN'),
+		tds = $(tr).find('span.tariffval,span.tariffopt,span.tariffsel'),
 		i, j, n, v, period, input, sel, opt, pn,
 		periods = { {strip}
 			"-":0
@@ -173,12 +181,13 @@ function edit_tariff(id) {
 	edited_row = id;
 
 	k = 0;
-	for (i=0; i<tds.length; i++) {
-		pn = tds[i].parentNode;
-		v  = tds[i].innerHTML.replace(/^\s+/, '').replace(/\s+$/, '');
 
-		if (/^tariffval[0-9]+_/.test(tds[i].id)) {
-			n  = tds[i].id.replace(/^tariffval[0-9]+_/, '');
+	tds.each(function() {
+		pn = $(this).parent();
+		v  = this.innerHTML.replace(/^\s+/, '').replace(/\s+$/, '');
+
+		if (/^tariffval[0-9]+_/.test(this.id)) {
+			n  = this.id.replace(/^tariffval[0-9]+_/, '');
 
 			if (v.match(/^([0-9,.+-]+)\s+\(([^)]+)\)/)) {
 				v = RegExp.$1;
@@ -186,64 +195,44 @@ function edit_tariff(id) {
 			} else
 				period = 0;
 
-			input = document.createElement('INPUT');
-			input.setAttribute('type', 'text');
-			input.setAttribute('size', '8');
-			input.name = 'form[tariffval' + n + ']';
-			input.id = 'tariffval' + n;
-			input.value = v;
-			pn.appendChild(input);
+			$(pn).append('<input type="text" size="8" name="form[tariffval' + n + ']" id="tariffval' + n + '" value="' + v + '">');
 			// move cursor to activation field
 			if (!k) {
-				input.focus(); input.select();
+				$('#tariffval' + n).focus();
 			// add period selector
 			} else {
-				sel = document.createElement('BR');
-				pn.appendChild(sel);
-				sel = document.createElement('SELECT');
-				sel.name = 'form[tariffperiod' + n + ']';
-				sel.id = 'tariffperiod' + n;
-
+				innerHTML = '<BR><SELECT name="form[tariffperiod' + n + ']" id="tariffperiod' + n + '">';
 				for (j in periods) {
-					opt = document.createElement('OPTION');
-					opt.value = periods[j];
-					opt.innerHTML = j;
-					sel.appendChild(opt);
+					innerHTML += '<OPTION value="' + periods[j] + '"' + (period == periods[j] ? ' selected' : '') + '>' + j + '</OPTION>';
 				}
-				sel.value = period;
-				pn.appendChild(sel);
+				innerHTML += '</SELECT>';
+				$(pn).append(innerHTML);
 			}
 			k++;
-		} else if (/^tariffopt[0-9]+$/.test(tds[i].id)) {
-			input = document.createElement('INPUT');
-			input.setAttribute('type', 'checkbox');
-			if (v == '{trans("yes")}')
-				input.setAttribute('checked', '');
-			input.name = 'form[tariffopt]';
-			input.id = 'tariffopt';
-			input.value = '1';
-			pn.appendChild(input);
-		} else if (/^tariffsel[0-9]+$/.test(tds[i].id)) {
-			sel = document.createElement('SELECT');
-			sel.name = 'form[tariffsel]';
-			sel.id = 'tariffsel';
-
-			opt = document.createElement('OPTION');
-			opt.value = 0;
-			opt.innerHTML = '{trans("- none -")}';
-			sel.appendChild(opt);
-			for (j = 1; j < 10; j++) {
-				opt = document.createElement('OPTION');
-				opt.value = j;
-				opt.innerHTML = j;
-				sel.appendChild(opt);
-			}
-			if (parseInt(v) != NaN)
-				sel.value = parseInt(v);
-			pn.appendChild(sel);
+		} else if (/^tariffopt[0-9]+$/.test(this.id)) {
+			$(pn).append('<INPUT type="checkbox" name="form[tariffopt]" id="tariffopt" value="1"'
+				+ (v == '{trans("yes")}' ? ' checked' : '') + '>');
+		} else if (/^tariffsel[0-9]+$/.test(this.id)) {
+			$(pn).append('<span id="tariffselection">'
+				+ '<SELECT name="form[tariffsel]" id="tariffsel">'
+				+ '<OPTION value="0">{trans("<!promotionassignmentselectionid>- none -")}</OPTION>'
+				+ '<OPTION value="-1">{trans("<!promotionassignmentselectionid>- new -")}</OPTION>'
+				{foreach $schema.selections as $selid}
+				+ '<OPTION value="{$selid}"' + (v == '{$selid}' ? ' selected' : '') + '>{$selid}</OPTION>'
+				{/foreach}
+				+ '</SELECT><br>'
+				+ '<input type="text" size="15" name="form[tariffnewsel]" id="tariffnewsel" style="display: none;" {tip text="Enter new selection list name" trigger="tariffnewsel"}>'
+				+ '</span>');
+			$('#tariffsel').change(function() {
+				if ($(this).val() == '-1') {
+					$('#tariffnewsel').show();
+				} else {
+					$('#tariffnewsel').hide();
+				}
+			});
 		}
-		tds[i].style.display = 'none';
-	}
+		$(this).hide();
+	});
 
 	document.getElementById('cancel' + id).style.display = '';
 	document.getElementById('save' + id).style.display = '';
@@ -277,8 +266,7 @@ function cancel_tariff(id) {
 			v = document.getElementById('tariffopt');
 			v.parentNode.removeChild(v);
 		} else if (/^tariffsel[0-9]+$/.test(tds[i].id)) {
-			v = document.getElementById('tariffsel');
-			v.parentNode.removeChild(v);
+			$('#tariffselection').remove();
 		}
 	}
 
@@ -287,6 +275,13 @@ function cancel_tariff(id) {
 	document.getElementById('edit' + id).style.display = '';
 	document.getElementById('del' + id).style.display = '';
 }
+
+$('[name="form[sel]"]').change(function() {
+	if ($(this).val() == '-1')
+		$('#newsel').show();
+	else
+		$('#newsel').hide();
+});
 
 {if $error && $formdata.aid}
 document.getElementById('cancel{$formdata.aid}').style.display = '';
